--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/empirical-linguistics/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:hartmast@hhu.de" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -227,7 +227,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Alexander Willich & Stefan Hartmann, CC-BY 4.0. Gefördert vom <a href="https://www.elearning.hhu.de/projektfoerderung/elearning-foerderfonds" target="_blank"> e-Learning-Förderfonds der HHU Düsseldorf</a>.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+						<li>&copy; <a href="https://www.germanistik.hhu.de/abteilungen/abteilung-i-germanistische-sprachwissenschaft/univ-prof-dr-alexander-ziem/team-des-lehrstuhls-univ-prof-dr-alexander-ziem/alexander-willich-ma">Alexander Willich</a>  & <a href="https://www.germanistik.hhu.de/abteilungen/abteilung-i-germanistische-sprachwissenschaft/univ-prof-dr-alexander-ziem/team-des-lehrstuhls-univ-prof-dr-alexander-ziem/jun-prof-dr-stefan-hartmann">Stefan Hartmann</a>, <a href="creativecommons.org/by/4.0" target="_blank">CC-BY 4.0</a>. Gefördert vom <a href="https://www.elearning.hhu.de/projektfoerderung/elearning-foerderfonds" target="_blank"> e-Learning-Förderfonds der HHU Düsseldorf</a>.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 					</ul>
 
 			</div>
